# roamux

./: .gitattributes  .gitignore  BOOTSTRAP.md  CONTRIBUTING.md  NOTICE  README.md  cliff.toml
roamex/: BUILD.gn
roamex/app/: BUILD.gn  appcast_verifier.cc  appcast_verifier.h  roamex_sparkle_updater.h  roamex_sparkle_updater.mm  sparkle-Info.plist
roamex/chromium_src/: README.md
roamex/common/: BUILD.gn  roamex_crypto_passkey.cc  roamex_crypto_passkey.h  roamex_features.cc  roamex_features.h  roamex_prefs.cc  roamex_prefs.h  roamex_switches.h  roamex_url_constants.h  tab_strip_placement.cc  tab_strip_placement.h
roamex/mojom/: BUILD.gn  update_page.mojom
roamex/patches/: 0001-gn-all-add-roamex-targets.patch  0002-chromium-src-include-redirect.patch  0003-sample-marker.patch  0004-register-profile-prefs.patch  0005-tab-menu-tab-strip-position.patch  0006-settings-appearance-tab-strip-position.patch  0007-browser-layout-tab-strip-placement.patch  0008-vertical-tab-strip-roamex-placement.patch  0009-tab-uid-hooks.patch  0010-reload-initial-url-command.patch  0011-shared-shortcut-settings.patch  0012-initial-url-edit-ui.patch  0013-edge-chromium-importer.patch  0014-edge-secrets-keychain-oscrypt.patch  0015-tab-visit-journal-factory.patch  0016-tab-visit-observer-bridge.patch  0017-tab-visit-command-ids.patch  0018-tab-visit-commands.patch  0019-tab-visit-traversal-coordinator.patch  0020-tab-visit-gesture-watcher.patch  0021-tab-visit-clear-browsing-data.patch  0022-brave-style-profiles-name-only-creation.patch  0023-signin-surface-suppression-on-next-startup.patch  0024-signin-opt-in-flags-settings-inert-gate.patch  0025-sparkle-bundle-integration.patch  0026-update-service-factory-registration.patch  0027-roamex-about-webui-registration.patch  0028-roamex-scheme-alias.patch  README.md
roamex/test/: brave_style_profiles_unittest.cc  edge_import_adapter_unittest.cc  edge_import_preflight_unittest.cc  edge_import_report_unittest.cc  edge_local_storage_reader_unittest.cc  edge_profile_reader_unittest.cc  edge_secret_decryptor_unittest.mm  roamex_appcast_verifier_unittest.cc  roamex_browser_prefs_hook_unittest.cc  roamex_clear_browsing_data_browsertest.cc  roamex_edge_bookmarks_integration_unittest.cc  roamex_edge_import_coordinator_browsertest.cc  roamex_features_unittest.cc  roamex_frame_rtl_fullscreen_browsertest.cc  roamex_initial_url_browsertest.cc  roamex_initial_url_edit_browsertest.cc  roamex_initial_url_restore_browsertest.cc  roamex_origin_storage_import_browsertest.cc  roamex_overlay_mechanism_unittest.cc  roamex_prefs_unittest.cc  roamex_profile_creation_browsertest.cc  roamex_reload_initial_url_browsertest.mm  roamex_scheme_alias_browsertest.cc  roamex_scheme_classifier_unittest.cc  roamex_scheme_rewrite_unittest.cc  roamex_secret_import_stage_unittest.mm  roamex_settings_private_prefs_unittest.cc  roamex_shortcuts_browsertest.mm  roamex_signin_build_state_unittest.cc  roamex_signin_inert_unittest.cc  roamex_signin_optin_browsertest.cc  roamex_signin_surface_sweep_browsertest.cc  roamex_signin_surfaces_unittest.cc  roamex_smoke_unittest.cc  roamex_sparkle_feed_test.mm  roamex_tab_strip_bottom_layout_browsertest.cc  roamex_tab_strip_position_settings_browsertest.cc  roamex_tab_uid_browsertest.cc  roamex_tab_visit_gesture_browsertest.cc  roamex_tab_visit_observer_browsertest.cc  (+17 more)
roamux/: BUILD.gn
roamux/app/: BUILD.gn  appcast_verifier.cc  appcast_verifier.h  roamux_sparkle_updater.h  roamux_sparkle_updater.mm  sparkle-Info.plist
roamux/chromium_src/: README.md
roamux/common/: BUILD.gn  roamux_crypto_passkey.cc  roamux_crypto_passkey.h  roamux_features.cc  roamux_features.h  roamux_prefs.cc  roamux_prefs.h  roamux_switches.h  roamux_url_constants.h  roamux_version.h.in  tab_strip_placement.cc  tab_strip_placement.h
roamux/mojom/: BUILD.gn  update_page.mojom
roamux/patches/: 0001-gn-all-add-roamux-targets.patch  0002-chromium-src-include-redirect.patch  0003-sample-marker.patch  0004-register-profile-prefs.patch  0005-tab-menu-tab-strip-position.patch  0006-settings-appearance-tab-strip-position.patch  0007-browser-layout-tab-strip-placement.patch  0008-vertical-tab-strip-roamux-placement.patch  0009-tab-uid-hooks.patch  0010-reload-initial-url-command.patch  0011-shared-shortcut-settings.patch  0012-initial-url-edit-ui.patch  0013-edge-chromium-importer.patch  0014-edge-secrets-keychain-oscrypt.patch  0015-tab-visit-journal-factory.patch  0016-tab-visit-observer-bridge.patch  0017-tab-visit-command-ids.patch  0018-tab-visit-commands.patch  0019-tab-visit-traversal-coordinator.patch  0020-tab-visit-gesture-watcher.patch  0021-tab-visit-clear-browsing-data.patch  0022-brave-style-profiles-name-only-creation.patch  0023-signin-surface-suppression-on-next-startup.patch  0024-signin-opt-in-flags-settings-inert-gate.patch  0025-sparkle-bundle-integration.patch  0026-update-service-factory-registration.patch  0027-roamux-about-webui-registration.patch  0028-roamux-scheme-alias.patch  0029-mac-app-icon-roamux.patch  0030-sparkle-framework-rpath.patch  0031-check-for-update-menu-validation.patch  0032-roamux-about-mojo-binder.patch  0033-settings-about-roamux.patch  0034-settings-menu-roamux-chip.patch  0035-lit-visibility-roamux-settings-about.patch  0036-settings-optimize-webui-roamux-exclude.patch  0038-dark-logo-roamux.patch  0039-omnibox-chip-roamux-icon.patch  0040-sparkle-version-updater.patch  0041-location-bar-roamux-scheme-display.patch  (+14 more)
roamux/test/: brave_style_profiles_unittest.cc  edge_import_adapter_unittest.cc  edge_import_preflight_unittest.cc  edge_import_report_unittest.cc  edge_indexed_db_reader_unittest.cc  edge_local_storage_reader_unittest.cc  edge_profile_reader_unittest.cc  edge_secret_decryptor_unittest.mm  external_open_profile_unittest.cc  roamux_appcast_verifier_unittest.cc  roamux_bookmark_subfolder_groups_browsertest.cc  roamux_browser_prefs_hook_unittest.cc  roamux_chrome_urls_branding_browsertest.cc  roamux_clear_browsing_data_browsertest.cc  roamux_dark_logo_browsertest.cc  roamux_edge_bookmarks_integration_unittest.cc  (+65 more)
(+322 files in other folders)
