# SPDX-License-Identifier: Apache-2.0
# The //roamex overlay root (roam-1). Additive — the browser target depends on `//roamex` (plan §12.2).
# Placed at src/roamex/ in the Chromium checkout (BOOTSTRAP.md step 3).

import("//testing/test.gni")

group("roamex") {
  # Net-new overlay areas are added here as their epics land (E1–E6).
  deps = [
    "//roamex/browser/signin",
    "//roamex/browser/ui/tabs",
    "//roamex/common",
  ]
}

# All Roamex test binaries. gn_all reaches tests through this group (patch 0001), so adding a test
# target here never touches the upstream patch again.
group("roamex_tests") {
  testonly = true
  deps = [
    ":roamex_browser_unittests",
    ":roamex_browsertests",
    ":roamex_unittests",
  ]
}

# Fast unit tests — //roamex code + small deps only (no browser layer). Keep this target light.
test("roamex_unittests") {
  sources = [
    "test/roamex_features_unittest.cc",
    "test/roamex_signin_build_state_unittest.cc",
    "test/roamex_overlay_mechanism_unittest.cc",
    "test/roamex_prefs_unittest.cc",
    "test/roamex_smoke_unittest.cc",
    "test/tab_strip_placement_unittest.cc",
    "test/tab_strip_position_menu_unittest.cc",
  ]
  deps = [
    "//base",
    "//base/test:run_all_unittests",  # provides main() + base::TestSuite (inits FeatureList, AtExitManager)
    "//base/test:test_support",
    "//components/prefs:test_support",
    "//roamex/browser/signin",
    "//roamex/browser/ui/tabs",
    "//roamex/common",
    "//testing/gtest",
    "//ui/menus",
  ]
}

# Browser-layer tests — link upstream browser code (heavy first build). The roam-3 hook proof lives
# here so the fast target stays light. Deps notes (both hit for real): //chrome/browser/prefs:impl
# alone does not link (browser_prefs.cc needs the full //chrome/browser component), and a bare
# //base test main crashes (keyed-service registrars CHECK the UI thread / TestingBrowserProcess) —
# so the target uses Chrome's canonical unit-test main, //chrome/test:test_support_unit.
test("roamex_browser_unittests") {
  sources = [
    "test/roamex_browser_prefs_hook_unittest.cc",
    "test/roamex_settings_private_prefs_unittest.cc",
  ]
  deps = [
    "//base",
    "//chrome/test:test_support_unit",
    "//components/pref_registry",
    "//components/sync_preferences:test_support",
    "//content/test:test_support",
    "//roamex/common",
    "//testing/gtest",
  ]
}

# Settings-surface DOM tests (roam-6 WB-T4) — the overlay's browser_tests-style target: full
# browser bring-up via Chrome's canonical browser-test runner. Kept to the roamex suites; tier-2
# CI runs it filtered (RoamexTabStripPosition*) per roamex/build/ci/tier2_job.sh.
test("roamex_browsertests") {
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  sources = [ "test/roamex_tab_strip_position_settings_browsertest.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//chrome:packed_resources",
    "//chrome/browser",
    "//chrome/browser/ui",
    "//chrome/test:browser_tests_runner",
    "//chrome/test:test_support",
    "//chrome/test:test_support_ui",
    "//components/prefs",
    "//content/test:test_support",
    "//roamex/common",
    "//testing/gtest",
    "//url",
  ]
}
