# SPDX-License-Identifier: Apache-2.0
# The //roamex overlay root (roam-1). Additive — the browser target depends on `//roamex` (plan §12.2).
# Placed at src/roamex/ in the Chromium checkout (BOOTSTRAP.md step 3).

import("//roamex/build/buildflags.gni")
import("//testing/test.gni")

group("roamex") {
  # Net-new overlay areas are added here as their epics land (E1–E6).
  deps = [
    "//roamex/app",
    "//roamex/browser/profiles",
    "//roamex/browser/signin",
    "//roamex/browser/tab_visit",
    "//roamex/browser/tabs",
    "//roamex/browser/ui/tabs",
    "//roamex/common",
  ]
}

# All Roamex test binaries. gn_all reaches tests through this group (patch 0001), so adding a test
# target here never touches the upstream patch again.
group("roamex_tests") {
  testonly = true
  deps = [
    ":roamex_browser_unittests",
    ":roamex_browsertests",
    ":roamex_unittests",
  ]
  if (roamex_enable_sparkle) {
    deps += [ ":roamex_sparkle_tests" ]
  }
}

# roam-32: the fixed pre-signed feed driven through Sparkle's own pipeline.
# Exists only on roamex_enable_sparkle=true builds (vendored framework).
if (roamex_enable_sparkle) {
  test("roamex_sparkle_tests") {
    sources = [ "test/roamex_sparkle_feed_test.mm" ]
    data = [ "test/data/sparkle/" ]
    configs += [
      "//roamex/app:sparkle_link",
      "//roamex/app:sparkle_test_rpath",
    ]
    deps = [
      "//base",
      "//base/test:run_all_unittests",
      "//base/test:test_support",
      "//net:test_support",
      "//roamex/app:app_buildflags",
      "//testing/gtest",
    ]
    frameworks = [ "Foundation.framework" ]
  }
}

# Fast unit tests — //roamex code + small deps only (no browser layer). Keep this target light.
test("roamex_unittests") {
  sources = [
    "test/brave_style_profiles_unittest.cc",
    "test/edge_import_adapter_unittest.cc",
    "test/roamex_appcast_verifier_unittest.cc",
    "test/edge_import_preflight_unittest.cc",
    "test/edge_import_report_unittest.cc",
    "test/edge_indexed_db_reader_unittest.cc",
    "test/edge_local_storage_reader_unittest.cc",
    "test/edge_profile_reader_unittest.cc",
    "test/edge_secret_decryptor_unittest.mm",
    "test/roamex_edge_import_driver_unittest.cc",
    "test/roamex_features_unittest.cc",
    "test/roamex_indexed_db_import_stage_unittest.cc",
    "test/roamex_overlay_mechanism_unittest.cc",
    "test/roamex_prefs_unittest.cc",
    "test/roamex_signin_build_state_unittest.cc",
    "test/roamex_signin_inert_unittest.cc",
    "test/roamex_signin_surfaces_unittest.cc",
    "test/roamex_smoke_unittest.cc",
    "test/roamex_tab_visit_observer_unittest.cc",
    "test/shortcut_registry_unittest.cc",
    "test/tab_strip_placement_observer_unittest.cc",
    "test/tab_strip_placement_unittest.cc",
    "test/tab_strip_position_menu_unittest.cc",
    "test/tab_traversal_controller_unittest.cc",
    "test/tab_uid_service_unittest.cc",
    "test/visits_store_unittest.cc",
  ]
  data = [ "test/data/sparkle/" ]
  deps = [
    "//base",
    "//base/test:run_all_unittests",  # provides main() + base::TestSuite (inits
                                      # FeatureList, AtExitManager)
    "//base/test:test_support",
    "//components/prefs:test_support",
    "//components/signin/public/base",
    "//components/user_data_importer/common",
    "//crypto",
    "//roamex/app:appcast_verifier",
    "//roamex/browser/importer",
    "//roamex/browser/profiles",
    "//roamex/browser/signin",
    "//roamex/browser/tab_visit",
    "//roamex/browser/tabs",
    "//roamex/browser/ui/tabs",
    "//roamex/common",
    "//roamex/common:crypto_passkey",
    "//roamex/utility/importer",
    "//sql",
    "//storage/common",
    "//testing/gtest",
    "//third_party/blink/public/common",
    "//third_party/boringssl",
    "//third_party/leveldatabase",
    "//ui/gfx:test_support",
    "//ui/menus",
  ]
}

# Browser-layer tests — link upstream browser code (heavy first build). The roam-3 hook proof lives
# here so the fast target stays light. Deps notes (both hit for real): //chrome/browser/prefs:impl
# alone does not link (browser_prefs.cc needs the full //chrome/browser component), and a bare
# //base test main crashes (keyed-service registrars CHECK the UI thread / TestingBrowserProcess) —
# so the target uses Chrome's canonical unit-test main, //chrome/test:test_support_unit.
test("roamex_browser_unittests") {
  sources = [
    "test/roamex_browser_prefs_hook_unittest.cc",
    "test/roamex_settings_private_prefs_unittest.cc",
    "test/settled_visit_journal_service_unittest.cc",
    "test/tab_initial_url_helper_unittest.cc",
    "test/tab_initial_url_persistence_unittest.cc",
  ]
  deps = [
    "//base",
    "//chrome/test:test_support_unit",
    "//components/pref_registry",
    "//components/sync_preferences:test_support",
    "//content/test:test_support",
    "//roamex/browser/tab_visit",
    "//roamex/common",
    "//testing/gtest",
  ]
}

# Settings-surface DOM tests (roam-6 WB-T4) — the overlay's browser_tests-style target: full
# browser bring-up via Chrome's canonical browser-test runner. Kept to the roamex suites; tier-2
# CI runs it filtered (RoamexTabStripPosition*) per roamex/build/ci/tier2_job.sh.
test("roamex_browsertests") {
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  sources = [
    "test/roamex_clear_browsing_data_browsertest.cc",
    "test/roamex_edge_import_coordinator_browsertest.cc",
    "test/roamex_edge_import_driver_browsertest.cc",
    "test/roamex_frame_rtl_fullscreen_browsertest.cc",
    "test/roamex_indexed_db_import_browsertest.cc",
    "test/roamex_initial_url_browsertest.cc",
    "test/roamex_initial_url_edit_browsertest.cc",
    "test/roamex_initial_url_restore_browsertest.cc",
    "test/roamex_origin_storage_import_browsertest.cc",
    "test/roamex_profile_creation_browsertest.cc",
    "test/roamex_reload_initial_url_browsertest.mm",
    "test/roamex_signin_surface_sweep_browsertest.cc",
    "test/roamex_signin_optin_browsertest.cc",
    "test/roamex_shortcuts_browsertest.mm",
    "test/roamex_tab_strip_bottom_layout_browsertest.cc",
    "test/roamex_tab_strip_position_settings_browsertest.cc",
    "test/roamex_tab_uid_browsertest.cc",
    "test/roamex_tab_visit_gesture_browsertest.cc",
    "test/roamex_tab_visit_observer_browsertest.cc",
    "test/roamex_tab_visit_reopen_browsertest.cc",
    "test/roamex_tab_visit_restart_browsertest.cc",
    "test/roamex_tab_visit_uid_flag_matrix_browsertest.cc",
    "test/roamex_three_carrier_survival_browsertest.cc",
    "test/roamex_vertical_strip_placement_browsertest.cc",
    "test/support/sso_test_server.cc",
    "test/support/sso_test_server.h",
  ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//chrome:packed_resources",
    "//chrome/browser",
    "//chrome/browser/importer:impl",
    "//chrome/browser/ui",
    "//chrome/test:browser_tests_runner",
    "//chrome/test:test_support",
    "//chrome/test:test_support_ui",
    "//components/prefs",
    "//components/services/storage/privileged/mojom",
    "//components/services/storage/public/mojom",
    "//components/user_data_importer/common",
    "//content/test:test_support",
    "//components/search_engines",
    "//components/signin/public/base",
    "//components/signin/public/identity_manager",
    "//net:test_support",
    "//google_apis",
    "//roamex/browser/importer",
    "//roamex/browser/profiles",
    "//roamex/browser/signin",
    "//roamex/browser/tab_visit",
    "//roamex/browser/tabs",
    "//roamex/common",
    "//testing/gtest",
    "//third_party/blink/public/common",
    "//third_party/leveldatabase",
    "//ui/events:test_support",
    "//ui/gfx/geometry",
    "//ui/views",
    "//url",
  ]
}
