# SPDX-License-Identifier: Apache-2.0
# The //roamux overlay root (roam-1). Additive — the browser target depends on `//roamux` (plan §12.2).
# Placed at src/roamux/ in the Chromium checkout (BOOTSTRAP.md step 3).

import("//roamux/build/buildflags.gni")
import("//testing/test.gni")

group("roamux") {
  # Net-new overlay areas are added here as their epics land (E1–E6).
  deps = [
    "//roamux/app",
    "//roamux/browser/profiles",
    "//roamux/browser/scheme",
    "//roamux/browser/signin",
    "//roamux/browser/tab_visit",
    "//roamux/browser/tabs",
    "//roamux/browser/ui/tabs",
    "//roamux/browser/updates:update_state_machine",
    "//roamux/common",
  ]
}

# All Roamux test binaries. gn_all reaches tests through this group (patch 0001), so adding a test
# target here never touches the upstream patch again.
group("roamux_tests") {
  testonly = true
  deps = [
    ":roamux_browser_unittests",
    ":roamux_browsertests",
    ":roamux_unittests",
  ]
  if (roamux_enable_sparkle) {
    deps += [ ":roamux_sparkle_tests" ]
  }
}

# roam-32: the fixed pre-signed feed driven through Sparkle's own pipeline.
# Exists only on roamux_enable_sparkle=true builds (vendored framework).
if (roamux_enable_sparkle) {
  test("roamux_sparkle_tests") {
    sources = [ "test/roamux_sparkle_feed_test.mm" ]
    data = [ "test/data/sparkle/" ]
    configs += [
      "//roamux/app:sparkle_link",
      "//roamux/app:sparkle_test_rpath",
    ]
    deps = [
      "//base",
      "//base/test:run_all_unittests",
      "//base/test:test_support",
      "//net:test_support",
      "//roamux/app:app_buildflags",
      "//testing/gtest",
    ]
    frameworks = [ "Foundation.framework" ]
  }
}

# Fast unit tests — //roamux code + small deps only (no browser layer). Keep this target light.
test("roamux_unittests") {
  sources = [
    "test/brave_style_profiles_unittest.cc",
    "test/edge_import_adapter_unittest.cc",
    "test/edge_import_preflight_unittest.cc",
    "test/edge_import_report_unittest.cc",
    "test/edge_indexed_db_reader_unittest.cc",
    "test/edge_local_storage_reader_unittest.cc",
    "test/edge_profile_reader_unittest.cc",
    "test/edge_secret_decryptor_unittest.mm",
    "test/roamux_appcast_verifier_unittest.cc",
    "test/roamux_edge_import_driver_unittest.cc",
    "test/roamux_features_unittest.cc",
    "test/roamux_indexed_db_import_stage_unittest.cc",
    "test/roamux_overlay_mechanism_unittest.cc",
    "test/roamux_prefs_unittest.cc",
    "test/roamux_scheme_rewrite_unittest.cc",
    "test/roamux_signin_build_state_unittest.cc",
    "test/roamux_signin_inert_unittest.cc",
    "test/roamux_signin_surfaces_unittest.cc",
    "test/roamux_smoke_unittest.cc",
    "test/roamux_tab_visit_observer_unittest.cc",
    "test/roamux_update_state_machine_unittest.cc",
    "test/shortcut_registry_unittest.cc",
    "test/tab_strip_placement_observer_unittest.cc",
    "test/tab_strip_placement_unittest.cc",
    "test/tab_strip_position_menu_unittest.cc",
    "test/tab_traversal_controller_unittest.cc",
    "test/tab_uid_service_unittest.cc",
    "test/visits_store_unittest.cc",
  ]
  data = [ "test/data/sparkle/" ]
  deps = [
    "//base",
    "//base/test:run_all_unittests",  # provides main() + base::TestSuite (inits
                                      # FeatureList, AtExitManager)
    "//base/test:test_support",
    "//components/prefs:test_support",
    "//components/signin/public/base",
    "//components/user_data_importer/common",
    "//crypto",
    "//roamux/app:appcast_verifier",
    "//roamux/browser/importer",
    "//roamux/browser/profiles",
    "//roamux/browser/scheme",
    "//roamux/browser/signin",
    "//roamux/browser/tab_visit",
    "//roamux/browser/tabs",
    "//roamux/browser/ui/tabs",
    "//roamux/browser/updates:update_state_machine",
    "//roamux/common",
    "//roamux/common:crypto_passkey",
    "//roamux/mojom",
    "//roamux/utility/importer",
    "//sql",
    "//storage/common",
    "//testing/gtest",
    "//third_party/blink/public/common",
    "//third_party/boringssl",
    "//third_party/leveldatabase",
    "//ui/gfx:test_support",
    "//ui/menus",
  ]
}

# Browser-layer tests — link upstream browser code (heavy first build). The roam-3 hook proof lives
# here so the fast target stays light. Deps notes (both hit for real): //chrome/browser/prefs:impl
# alone does not link (browser_prefs.cc needs the full //chrome/browser component), and a bare
# //base test main crashes (keyed-service registrars CHECK the UI thread / TestingBrowserProcess) —
# so the target uses Chrome's canonical unit-test main, //chrome/test:test_support_unit.
test("roamux_browser_unittests") {
  sources = [
    "test/roamux_browser_prefs_hook_unittest.cc",
    "test/roamux_scheme_classifier_unittest.cc",
    "test/roamux_settings_private_prefs_unittest.cc",
    "test/roamux_update_page_mojo_unittest.cc",
    "test/settled_visit_journal_service_unittest.cc",
    "test/tab_initial_url_helper_unittest.cc",
    "test/tab_initial_url_persistence_unittest.cc",
  ]
  deps = [
    "//base",
    "//chrome/browser",
    "//chrome/test:test_support_unit",
    "//components/pref_registry",
    "//components/sync_preferences:test_support",
    "//content/test:test_support",
    "//mojo/public/cpp/bindings",
    "//roamux/browser/tab_visit",
    "//roamux/browser/updates:test_support",
    "//roamux/common",
    "//roamux/mojom",
    "//testing/gtest",
    "//third_party/metrics_proto",
  ]
}

# Settings-surface DOM tests (roam-6 WB-T4) — the overlay's browser_tests-style target: full
# browser bring-up via Chrome's canonical browser-test runner. Kept to the roamux suites; tier-2
# CI runs it filtered (RoamuxTabStripPosition*) per roamux/build/ci/tier2_job.sh.
test("roamux_browsertests") {
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  sources = [
    "test/roamux_clear_browsing_data_browsertest.cc",
    "test/roamux_edge_import_coordinator_browsertest.cc",
    "test/roamux_edge_import_driver_browsertest.cc",
    "test/roamux_frame_rtl_fullscreen_browsertest.cc",
    "test/roamux_indexed_db_import_browsertest.cc",
    "test/roamux_initial_url_browsertest.cc",
    "test/roamux_initial_url_edit_browsertest.cc",
    "test/roamux_initial_url_restore_browsertest.cc",
    "test/roamux_origin_storage_import_browsertest.cc",
    "test/roamux_profile_creation_browsertest.cc",
    "test/roamux_reload_initial_url_browsertest.mm",
    "test/roamux_scheme_alias_browsertest.cc",
    "test/roamux_shortcuts_browsertest.mm",
    "test/roamux_signin_optin_browsertest.cc",
    "test/roamux_signin_surface_sweep_browsertest.cc",
    "test/roamux_tab_strip_bottom_layout_browsertest.cc",
    "test/roamux_tab_strip_position_settings_browsertest.cc",
    "test/roamux_tab_uid_browsertest.cc",
    "test/roamux_tab_visit_gesture_browsertest.cc",
    "test/roamux_tab_visit_observer_browsertest.cc",
    "test/roamux_tab_visit_reopen_browsertest.cc",
    "test/roamux_tab_visit_restart_browsertest.cc",
    "test/roamux_tab_visit_uid_flag_matrix_browsertest.cc",
    "test/roamux_test_env_browsertest.cc",
    "test/roamux_three_carrier_survival_browsertest.cc",
    "test/roamux_vertical_strip_placement_browsertest.cc",
    "test/support/sso_test_server.cc",
    "test/support/sso_test_server.h",
  ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//chrome:packed_resources",
    "//chrome/browser",
    "//chrome/browser/importer:impl",
    "//chrome/browser/ui",
    "//chrome/test:browser_tests_runner",
    "//chrome/test:test_support",
    "//chrome/test:test_support_ui",
    "//components/prefs",
    "//components/search_engines",
    "//components/services/storage/privileged/mojom",
    "//components/services/storage/public/mojom",
    "//components/signin/public/base",
    "//components/signin/public/identity_manager",
    "//components/user_data_importer/common",
    "//content/test:test_support",
    "//google_apis",
    "//net:test_support",
    "//roamux/browser/importer",
    "//roamux/browser/profiles",
    "//roamux/browser/signin",
    "//roamux/browser/tab_visit",
    "//roamux/browser/tabs",
    "//roamux/common",
    "//testing/gtest",
    "//third_party/blink/public/common",
    "//third_party/leveldatabase",
    "//ui/events:test_support",
    "//ui/gfx/geometry",
    "//ui/views",
    "//url",
  ]
}
