# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/app — the Roamex.app bundle surface (E6). roam-32: Sparkle
# auto-update integration behind roamex_enable_sparkle (plan §13.6/K4).

import("//build/buildflag_header.gni")
import("//roamex/build/buildflags.gni")

buildflag_header("app_buildflags") {
  header = "app_buildflags.h"
  flags = [ "ROAMEX_ENABLE_SPARKLE=$roamex_enable_sparkle" ]
}

# The Ed25519 appcast verifier is flag-independent: I-6.3's release pipeline
# validation and the fixture tests use it in every build shape.
source_set("appcast_verifier") {
  sources = [
    "appcast_verifier.cc",
    "appcast_verifier.h",
  ]
  deps = [
    "//base",
    "//third_party/boringssl",
  ]
}

group("app") {
  public_deps = [ ":app_buildflags" ]
  deps = [ ":appcast_verifier" ]
  if (roamex_enable_sparkle) {
    deps += [
      ":sparkle_framework",
      ":sparkle_updater",
    ]
  }
}

if (roamex_enable_sparkle) {
  sparkle_root = "//roamex/third_party/sparkle"

  # Fail loudly at build time (plan R16 / roam-32 review): flag-on builds
  # require the hash-pinned vendor step first; the action names it.
  action("check_sparkle_vendored") {
    script = "//roamex/build/check_sparkle_vendored.py"
    inputs = []
    outputs = [ "$target_gen_dir/sparkle_vendored.stamp" ]
    args = [
      rebase_path(sparkle_root, root_build_dir),
      rebase_path(outputs[0], root_build_dir),
    ]
  }

  # The whole .framework directory is one opaque bundle input — tar/GN/copy
  # must preserve its symlink layout (Sparkle deltas + codesign break flat).
  bundle_data("sparkle_framework") {
    sources = [ "$sparkle_root/Sparkle.framework" ]
    outputs = [ "{{bundle_contents_dir}}/Frameworks/{{source_file_part}}" ]
    deps = [ ":check_sparkle_vendored" ]
  }

  config("sparkle_link") {
    framework_dirs = [ sparkle_root ]
    frameworks = [ "Sparkle.framework" ]
    # The bundle copies Sparkle into Contents/Frameworks; the executable and
    # the framework that links it resolve via the standard Chromium rpaths.
    ldflags = [ "-Wl,-rpath,@loader_path/../Frameworks" ]
  }

  # Obj-C++ updater surface, compiled only when the flag is on. The
  # app_controller / menu patch hunks (patch 0025) are themselves guarded by
  # BUILDFLAG(ROAMEX_ENABLE_SPARKLE).
  source_set("sparkle_updater") {
    sources = [
      "roamex_sparkle_updater.h",
      "roamex_sparkle_updater.mm",
    ]
    configs += [ ":sparkle_link" ]
    deps = [
      ":app_buildflags",
      ":check_sparkle_vendored",
      "//base",
    ]
    frameworks = [ "AppKit.framework" ]
  }

  # Test-executable consumers load the framework from the vendored source
  # tree (the app bundle uses @loader_path/../Frameworks instead).
  config("sparkle_test_rpath") {
    # Absolute: dyld does not resolve relative LC_RPATHs against cwd.
    ldflags = [ "-Wl,-rpath," + rebase_path(sparkle_root) ]
  }
}
