# SPDX-License-Identifier: Apache-2.0
# Additive //roamex/common — shared helpers (features, prefs). No upstream edit (plan §12.2).

source_set("common") {
  sources = [
    "roamex_features.cc",
    "roamex_features.h",
    "roamex_prefs.cc",
    "roamex_prefs.h",
    "roamex_switches.h",
    "roamex_url_constants.h",
    "tab_strip_placement.cc",
    "tab_strip_placement.h",
  ]
  deps = [
    "//base",
    "//components/prefs",
    "//ui/gfx/geometry",
  ]
}

# roam-16: the crypto passkey seam (friended in crypto/subtle_passkey.h by 0014).
source_set("crypto_passkey") {
  sources = [
    "roamex_crypto_passkey.cc",
    "roamex_crypto_passkey.h",
  ]
  deps = [ "//crypto" ]
}
